--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/w3.css">
 </head>
@@ -22,12 +21,18 @@
     </p>
     <p>Texas hold 'em (also known as Texas holdem, hold 'em, and holdem) is one of the most popular variants of the card game of poker. Two cards, known as hole cards, are dealt face down to each player, and then five community cards are dealt face up in three stages.All players in the game use these shared community cards in conjunction with their own hole cards to each make their best possible five-card poker hand.</p>
     <p>Here are the winning poker hands, from highest to lowest:</p>
-    <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands" srcset="poker cards">
+    <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands">
 </div>
 
 <div class="w3-pqnel w3-red">
     <p>Step 1</p>
     <p>Pre-Flop</p>
+</div>
+<div>
+    <p>This is the initial betting round, which occurs after players have been dealt their two hole cards (face down). Players decide whether to fold, call, or raise based on the strength of their cards.</p>
+</div>
+<div>
+        <canvas id="pokerCanvas" width="800" height="600"></canvas>
 </div>
 <div id="step 1"></div>
 
@@ -49,11 +54,14 @@
 </div>
 <div id="step 4"></div>
 
+<div class="w3-pqnel w3-red">
+    <p>Step 5</p>
+    <p>Showdown</p>
+</div>
+<div id="step 5"></div>
 
 
-
-    
     
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="./js/paula.js"></script>
 </html>
