--- a/index.html
+++ b/index.html
@@ -4,12 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css/">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/w3.css">
-
 </head>
-<body>
-    <script src="./js/script.js"></script>
-</body>
+<body class="w3-container">
+    <div style="display: flex; align-items: center; justify-content: space-between"
+    class="w3-card w3-padding-16 w3-margin"
+    >
+    <h1 class="thick"> WELCOME TO POKER: Texas Hold'em</h1>
+        
+</div>
 
+<div class="w3-panel w3 leftbar w3-light-grey">
+    <p class="w3-xlarge w3-serif">
+        <i>About</i>
+    </p>
+    <p>Texas hold 'em (also known as Texas holdem, hold 'em, and holdem) is one of the most popular variants of the card game of poker. Two cards, known as hole cards, are dealt face down to each player, and then five community cards are dealt face up in three stages.All players in the game use these shared community cards in conjunction with their own hole cards to each make their best possible five-card poker hand.</p>
+    <p>Here are the winning poker hands, from highest to lowest:</p>
+    <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands">
+</div>
+
+<div class="w3-pqnel w3-red">
+    <p>Step 1</p>
+    <p>Pre-Flop</p>
+</div>
+<div>
+    <p>This is the initial betting round, which occurs after players have been dealt their two hole cards (face down). Players decide whether to fold, call, or raise based on the strength of their cards.</p>
+</div>
+<div>
+        <canvas id="pokerCanvas" width="800" height="600"></canvas>
+</div>
+<div id="step 1"></div>
+
+<div class="w3-pqnel w3-red">
+    <p>Step 2</p>
+    <p>Flop</p>
+</div>
+<div id="step 2"></div>
+
+<div class="w3-pqnel w3-red">
+    <p>Step 3</p>
+    <p>Turn</p>
+</div>
+<div id="step 3"></div>
+
+<div class="w3-pqnel w3-red">
+    <p>Step 4</p>
+    <p>River</p>
+</div>
+<div id="step 4"></div>
+
+<div class="w3-pqnel w3-red">
+    <p>Step 5</p>
+    <p>Showdown</p>
+</div>
+<div id="step 5"></div>
+<div>
+    <p>.Each remaining player will participate in the “showdown.” Starting to the left of the dealer, all players involved will reveal their cards face up. Then, everyone looks at the turned over hands to see who has the highest value hand to win the entire pot.</p>
+</div>
+
+    
+</body>
+<script src="./js/august.js"></script>
 </html>
