--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <p>Showdown</p>
 </div>
 <div id="step 5"></div>
+<canvas id="pokerCanvas" width="800" height="600"></canvas>
 <div>
     <p>.Each remaining player will participate in the “showdown.” Starting to the left of the dealer, all players involved will reveal their cards face up. Then, everyone looks at the turned over hands to see who has the highest value hand to win the entire pot.</p>
 </div>
