--- a/index.html
+++ b/index.html
@@ -54,17 +54,21 @@
 </div>
 <div id="step 4"></div>
 
-<div class="w3-pqnel w3-red">
+<div class="w3-panel w3-red">
     <p>Step 5</p>
     <p>Showdown</p>
+    
+</div>
+<div>
+    <p>Each remaining player will participate in the “showdown.” Starting to the left of the dealer, all players involved will reveal their cards face up. Then, everyone looks at the turned over hands to see who has the highest value hand to win the entire pot.</p>
+</div>
+
+<div><canvas id="pokerCanvas5" width="800" height="600"></canvas>
 </div>
 <div id="step 5"></div>
-<canvas id="pokerCanvas" width="800" height="600"></canvas>
-<div>
-    <p>.Each remaining player will participate in the “showdown.” Starting to the left of the dealer, all players involved will reveal their cards face up. Then, everyone looks at the turned over hands to see who has the highest value hand to win the entire pot.</p>
-</div>
+
 
     
 </body>
-<script src="./js/august.js"></script>
+<script src="./august.js"></script>
 </html>
