Your commit message here

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/w3.css">
+    <title>Texas Hold'em Poker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="w3-container">
     <div style="display: flex; align-items: center; justify-content: space-between"
@@ -22,38 +20,16 @@
     </p>
     <p>Texas hold 'em (also known as Texas holdem, hold 'em, and holdem) is one of the most popular variants of the card game of poker. Two cards, known as hole cards, are dealt face down to each player, and then five community cards are dealt face up in three stages.All players in the game use these shared community cards in conjunction with their own hole cards to each make their best possible five-card poker hand.</p>
     <p>Here are the winning poker hands, from highest to lowest:</p>
-    <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands" srcset="poker cards">
+    <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands">
 </div>
+    <div class="w3-pqnel w3-red">
+        <p>Step 3</p>
+        <p>Turn</p>
+        <p>In poker, the turn is the fourth community card dealt after the flop. The dealer burns a card, then reveals the turn. A new betting round follows, where players evaluate their hands and decide their actions.
+        </p>
 
-<div class="w3-pqnel w3-red">
-    <p>Step 1</p>
-    <p>Pre-Flop</p>
-</div>
-<div id="step 1"></div>
-
-<div class="w3-pqnel w3-red">
-    <p>Step 2</p>
-    <p>Flop</p>
-</div>
-<div id="step 2"></div>
-
-<div class="w3-pqnel w3-red">
-    <p>Step 3</p>
-    <p>Turn</p>
-</div>
-<div id="step 3"></div>
-
-<div class="w3-pqnel w3-red">
-    <p>Step 4</p>
-    <p>River</p>
-</div>
-<div id="step 4"></div>
-
-
-
-
-    
-    
+    </div>
+    <canvas id="pokerCanvas" width="800" height="600"></canvas>
+    <script src="Alvin.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
