--- a/index.html
+++ b/index.html
@@ -4,31 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Texas Hold'em Poker</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/w3.css">
 </head>
 <body class="w3-container">
-    <div class="w3-card w3-padding-16 w3-margin" style="display: flex; align-items: center; justify-content: space-between">
-        <h1 class="thick">WELCOME TO POKER: Texas Hold'em</h1>
-    </div>
-
-    <div class="w3-panel w3-leftbar w3-light-grey">
-        <p class="w3-xlarge w3-serif">
-            <i>About</i>
-        </p>
-        <p>Texas hold 'em (also known as Texas holdem, hold 'em, and holdem) is one of the most popular variants of the card game of poker. Two cards, known as hole cards, are dealt face down to each player, and then five community cards are dealt face up in three stages. All players in the game use these shared community cards in conjunction with their own hole cards to each make their best possible five-card poker hand.</p>
-        <p>Here are the winning poker hands, from highest to lowest:</p>
-        <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands">
-    </div>
-
-
 
         <div class="w3-panel w3-red">
             <p>Step 2</p>
             <p>Flop</p>
-            <p>Flop: The first three community cards are dealt face-up in the center of the table. This is followed by another round of betting. Players now have five cards to consider (their two hole cards plus the three community cards).</p>
         </div>
+            <p>The first three community cards are dealt face-up in the center of the table. This is followed by another round of betting. Players now have five cards to consider (their two hole cards plus the three community cards).</p>
+            
         
         <div id="step2" class="game-stage">
             <div id="poker-table-container">
