--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Here are the winning poker hands, from highest to lowest:</p>
         <img src="https://www.wikihow.com/images/thumb/6/65/Play-Poker-Step-1-Version-6.jpg/v4-373px-Play-Poker-Step-1-Version-6.jpg.webp" alt="poker winning hands">
     </div>
-    <div id="nextStep" class="w3-panel w3-red">
+    <div id="nextStepAron" class="w3-panel w3-red">
         <p>Step 4</p>
         <p>River</p>
     </div>
@@ -25,7 +25,7 @@
         <p>Examine the "river" card and decide on the hand you'll play. After the dealer "burns" the top card on the deck, they'll put 1 last card face up next to the “turn” card. This final card is called the “river.” Check your hand and the community cards to decide on your best 5-card hand. Then, bet, call, or fold.</p>
         <p>If the rules allow it, you may be able to exchange your hand 1 final time before or after betting. However, this isn’t common in professional games.</p>
     </div>
-    <div id="step4" class="w3-panel w3-white"></div>
+    <div id="step4Aron" class="w3-panel w3-white"></div>
     
     <script src="./js/aron.js"></script>
     
